Add LMDB utilities.